src/main/java/com/example/socialapi/common/exception/errors/NotFoundException.java
package com.example.socialapi.common.exception.errors;

public class NotFoundException extends RuntimeException{
    public NotFoundException(String message) {
        super(message);
    }
}
